--- a/upstage/backdrop.css
+++ b/upstage/backdrop.css
@@ -17,32 +17,41 @@
   min-width:100%;
   min-height:100%;
   mix-blend-mode:difference;
+  z-index: -500;
 }
 
 #curtains{
   position: fixed;
-  mix-blend-mode:screen;
   min-width:100%;
   min-height:100%;
+  z-index:100;
 }
 
 #bottom{
-  justify-content: center;
+  position:fixed;
+ width:100%;
+ height:50%;
+ bottom:0;
 }
 #grass{
- display:inline-block;
-  position: fixed;
-  min-width:100%;
-  bottom: 0px;
-  justify-content: center;
+display:inline-block;
+position:fixed;
+bottom:0;
+left:0;
+width:1349px;
+height:1024px;
+transform:translate(100px,395px);
+z-index:100;
+
 }
 
 
 @keyframes flutter{
   0%{transform: translate(0px, 0px);}
-  50% {transform: translate(100px, 150px);}
-  75% {transform: translate(500px, 300px);}
-  100% {transform: translate(700px, 150px);}
+  25%{transform: translate(200px, 300px);}
+  50% {transform: translate(400px, 200px);}
+  75% {transform: translate(800px, 250px);}
+  100% {transform: translate(1000px, 150px);}
 }
 
 .icon {
@@ -52,13 +61,14 @@
   stroke-width: 0;
   stroke: currentColor;
   fill: currentColor;
-  mix-blend-mode: screen;
   animation-name: flutter;
   animation-duration:10s;
-  animation-fill-mode: forwards;
+  animation-iteration-count:infinite;
+  animation-direction: alternate;
   }
 
 }
 .icon-butterfly {
   width: 13.330078125em;
+  z-index:300;
 }
